@@ -4,3 +4,4 @@
   * Prepared statements that don't return results hung
   * Result::getvalue dies on NULL value
   * Result::cmd_tuples should return the number of affected rows
+  * Connection::connect passes the 'options' properly to the backend.
